Add new publication functionality

--- a/Publishing-Service-Management-Information-System/src/main/resources/application.yml
+++ b/Publishing-Service-Management-Information-System/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
       ddl-auto: update
     properties:
       hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
 
 server:
   servlet:
