--- a/Publishing-Service-Management-Information-System/src/main/resources/application.yml
+++ b/Publishing-Service-Management-Information-System/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
 
 server:
   servlet:
