--- a/Publishing-Service-Management-Information-System/client/package.json
+++ b/Publishing-Service-Management-Information-System/client/package.json
@@ -11,12 +11,16 @@
     "@types/node": "^16.11.31",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
