--- a/Publishing-Service-Management-Information-System/client/package.json
+++ b/Publishing-Service-Management-Information-System/client/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.0",
