--- a/Publishing-Service-Management-Information-System/client/package.json
+++ b/Publishing-Service-Management-Information-System/client/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "js-file-download": "^0.4.12",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
