--- a/Publishing-Service-Management-Information-System/client/package.json
+++ b/Publishing-Service-Management-Information-System/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
+    "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "js-file-download": "^0.4.12",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
